Estilização da Página HTML

--- a/modulo1/html-sistema-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/funcionarios.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Funcionários</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div>
-      <p>Bar do Juninho</p>
+      <h1>Bar do Juninho</h1>
     </div>
 
     <div>
