--- a/modulo1/html-sistema-loja/index.html
+++ b/modulo1/html-sistema-loja/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title>Bar do Juninho</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div>
         <h1>Bem-vind@ ao <em>Bar do Juninho</em>!</h1>
-        <p>Onde sua noite vai até mais tarde!</p>
+        <p class="subheader">Onde sua noite vai até mais tarde!</p>
     </div>
 
     <div>
@@ -24,11 +25,11 @@
     </div>
 
     <div>
-        <p>Siga-nos nas redes sociais!</p>
+        <p class="texto-rodape">Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+            <img id="icon" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+            <img id="insta-button" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
             <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
         </div>
     </div>
