7. Arrumei o jeans bugado e o botão que estava preto.

--- a/modulo1/css-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/comprar.html
@@ -14,7 +14,7 @@
     <div class="container-do-search">
         <div>
             <input type="text">
-            <img src="https://static.thenounproject.com/png/105498-200.png" class="icone" alt="Buscar">
+            <img src="https://cdn.icon-icons.com/icons2/1111/PNG/512/loupe_79257.png" class="icone" alt="Buscar">
         </div>
     </div>
     <div>
