Alterações no Projeto Portfolio (WIP) e alterações acidentais no projeto blackjack

--- a/modulo1/projeto-portfolio/historico-escolar.html
+++ b/modulo1/projeto-portfolio/historico-escolar.html
@@ -12,6 +12,46 @@
         <a class ="topnavbutton" href="index.html">Início</a>
         <a class ="topnavbutton" href="sobre-mim.html">Sobre Mim</a>
         <a class ="topnavbutton" href="projetos.html">Meus Projetos</a>
-        <a class ="topnavbutton" href="historico-trabalho.html">Parcerias</a>
+        <a class ="topnavbutton" href="historico-trabalho.html">Trabalhos</a>
         <a class ="topnavbutton" href="historico-escolar.html">Onde Estudei</a>
       </div>
+      <div class="footer"
+      style="
+     position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+    text-align: center;"
+    >
+      <img
+        src="imagens/1200px-HTML5_logo_and_wordmark.svg.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
+      <img
+        src="imagens/js.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
+      <img
+        src="imagens/logo-2582747_960_720.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
