--- a/modulo1/projeto-portfolio/index.html
+++ b/modulo1/projeto-portfolio/index.html
@@ -12,55 +12,42 @@
       <a class="topnavbutton" href="index.html">Início</a>
       <a class="topnavbutton" href="sobre-mim.html">Sobre Mim</a>
       <a class="topnavbutton" href="projetos.html">Meus Projetos</a>
-      <a class="topnavbutton" href="historico-trabalho.html">Parcerias</a>
+      <a class="topnavbutton" href="historico-trabalho.html">Trabalhos</a>
       <a class="topnavbutton" href="historico-escolar.html">Onde Estudei</a>
     </div>
 
     <div class="header">
       <h1>Seja bem-vindo ao meu espaço pessoal!</h1>
+      
 
       <h3>Aqui você pode me conhecer um pouco melhor, aproveite o tour</h3>
     </div>
 
-    <div
-      style="
-        background: black;
-        padding: 1px;
-        border: 3px solid black;
-        margin: 1px;
-        height: 250px;
-        width: 500px;
-        margin: 250px 0px 0px 1300px;
-        border-radius: 10px;
-        color: white;
-      "
+
+    <div 
     >
-      <img src="/imagens/Sou eu.jpeg" alt="Uma foto minha" />
+      <img src="/imagens/Sou eu.jpeg" alt="Uma foto minha" class="soueujpg" />
       <h3 id="minha-fala">
-        "Sempre fui apaixonado por tecnologias, e agora<br />
+        "Sempre fui apaixonado por tecnologias, e agora
         posso ter um contato mais próximo com a programação, graças à Labenu!"
       </h3>
     </div>
 
-    <div
+    <div class="footer"
       style="
-        background-color: black;
-        padding: 1px;
-        border: 3px solid black;
-        margin: 1px;
-        height: 350px;
-        width: 500px;
-        margin: -250px 0px 0px 200px;
-        border-radius: 10px;
-        position: absolute;
-        color: white;
-      "
+     position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+    color: white;
+    text-align: center;"
     >
       <img
         src="imagens/1200px-HTML5_logo_and_wordmark.svg.png"
         style="
-          width: 100px;
-          height: 100px;
+          width: 50px;
+          height: 50px;
           border-radius: 10px;
           border: 4px solid black;
           margin: 27px;
@@ -69,8 +56,8 @@
       <img
         src="imagens/js.png"
         style="
-          width: 100px;
-          height: 100px;
+          width: 50px;
+          height: 50px;
           border-radius: 10px;
           border: 4px solid black;
           margin: 27px;
@@ -79,19 +66,22 @@
       <img
         src="imagens/logo-2582747_960_720.png"
         style="
-          width: 100px;
-          height: 100px;
+          width: 50px;
+          height: 50px;
           border-radius: 10px;
           border: 4px solid black;
           margin: 27px;
         "
       />
 
+
+    </div>
+    <div>
       <p class="introducao-inicio">
-        Bem-vindo! Como pode ver, acima estão as "linguagens" que eu trabalho.
+        Olá!<br> <br>Como pode ver, abaixo estão as linguagens que eu trabalho.
         Na aba Sobre Mim, você pode me conhecer melhor, na aba Meus Projetos,
         pode ver um pouco dos projetos que eu fiz e dos projetos que pretendo
-        fazer, na aba Parcerias, você pode encontrar mais informações sobre as
+        fazer, na aba Trabalhos, você pode encontrar mais informações sobre as
         empresas para as quais já trabalhei, e também pode me contratar! Se
         quiser mais informações sobre onde eu estudei, olhe na aba "Onde
         Estudei"
