--- a/modulo1/projeto-portfolio/sobre-mim.html
+++ b/modulo1/projeto-portfolio/sobre-mim.html
@@ -5,13 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Tácio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="sobre-mim.css" />
   </head>
   <body>
     <div class="menu-bar">
-        <a class ="topnavbutton" href="index.html">Início</a>
-        <a class ="topnavbutton" href="sobre-mim.html">Sobre Mim</a>
-        <a class ="topnavbutton" href="projetos.html">Meus Projetos</a>
-        <a class ="topnavbutton" href="historico-trabalho.html">Parcerias</a>
-        <a class ="topnavbutton" href="historico-escolar.html">Onde Estudei</a>
-      </div>
+      <a class="topnavbutton" href="index.html">Início</a>
+      <a class="topnavbutton" href="sobre-mim.html">Sobre Mim</a>
+      <a class="topnavbutton" href="projetos.html">Meus Projetos</a>
+      <a class="topnavbutton" href="historico-trabalho.html">Trabalhos</a>
+      <a class="topnavbutton" href="historico-escolar.html">Onde Estudei</a>
+    </div>
+
+    <div>
+      <img
+        src="https://pbs.twimg.com/media/DMGTH-aX4AEo3Je.jpg"
+        id="questionimg"
+      />
+      <p class="question">
+        Mas agora, você deve estar se perguntando: "Quem é esse cara?"
+      </p>
+      <p class="answer">
+        E eu te respondo: Meu nome é Tácio, nasci em 1999, em Vitória.
+        Atualmente moro em MG e sempre tive um pé na área de tecnologia (mas
+        sempre como consumidor, nunca como criador.) Sou apaixonado por games,
+        animes e mangás. Comecei de verdade no mundo da programação em 2022,
+        como JS dev, e absolutamente amo o que faço. Ainda não sou um dev muito
+        bom, mas com o tempo eu vou melhorar, prometo. Fique à vontade para
+        olhar o site, conhecer um pouco mais dos meus projetos e quem sabe até
+        possivelmente me convidar para realizar algum projeto para você (sim,
+        você mesmo que está lendo isso).
+      </p>
+      <p class="skills">Ah, e você pode encontrar uma lista das minhas habilidades e defeitos <a href="habilidades.html">aqui.</a></p>
+      <img
+        src="https://assets2.theenglishfarm.com/sites/default/files/styles/featured_image/public/harold_2.jpg?itok=NGsRc1Co"
+        id="answerimg"
+      />
+    </div>
+    <div
+      class="footer"
+      style="
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: grey;
+        color: white;
+        text-align: center;
+      "
+    >
+      <img
+        src="imagens/1200px-HTML5_logo_and_wordmark.svg.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
+      <img
+        src="imagens/js.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
+      <img
+        src="imagens/logo-2582747_960_720.png"
+        style="
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          border: 4px solid black;
+          margin: 27px;
+        "
+      />
+    </div>
+  </body>
+</html>
