Mais um pedaço do site feito, infelizmente ainda WIP, a estilização ideal me tomou muito tempo

--- a/modulo1/projeto-portfolio/historico-trabalho.html
+++ b/modulo1/projeto-portfolio/historico-trabalho.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio Tácio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="historico-trabalho.css" />
   </head>
   <body>
     <div class="menu-bar">
@@ -56,4 +56,8 @@
         "
       />
       </div>
+
+      <h1>Que pena, ainda não há nenhum trabalho realizado! :(</h1>
+      <p>Que tal entrar em contato para fazermos um orçamento?</p>
+      
   </body>
