--- a/modulo1/flex-grid/index.html
+++ b/modulo1/flex-grid/index.html
@@ -22,23 +22,23 @@
 
       <main>
         <section>
-            <div class="home">
+            <div class="menu-bar">
                 <img src="https://cdn2.iconfinder.com/data/icons/pittogrammi/142/65-512.png">
-                <h3> HOME </h3>
-                <img src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
+                Home
+                <img class="seta"src ="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
             </div>
-            <div class="produtos"> 
+            <div class="menu-bar"> 
                <img src="https://cdn.onlinewebfonts.com/svg/img_480095.png">
-               <h3> PRODUTOS</h3> 
-               <img src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
+               Produtos
+               <img class="seta"src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
             </div>
-            <div class="carrinho"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Ic_shopping_cart_48px.svg/1024px-Ic_shopping_cart_48px.svg.png">
-               <h3> CARRINHO</h3> 
-               <img src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
+            <div class="menu-bar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Ic_shopping_cart_48px.svg/1024px-Ic_shopping_cart_48px.svg.png">
+               Carrinho
+               <img class="seta" src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
             </div>
-            <div class="perfil"><img src="https://cdn.iconscout.com/icon/free/png-512/account-profile-avatar-man-circle-round-user-30452.png">
-                <h3> PERFIL</h3> 
-                <img src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
+            <div class="menu-bar"><img src="https://cdn.iconscout.com/icon/free/png-512/account-profile-avatar-man-circle-round-user-30452.png">
+                Perfil 
+                <img class="seta"src="https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png">
              </div>
             </section>
         <div class="conteudo">
