--- a/modulo1/css-labetube/video1.html
+++ b/modulo1/css-labetube/video1.html
@@ -17,7 +17,7 @@
     </div>
 
     <main>
-        <video width="100%" height="auto" controls autoplay>
+        <video controls autoplay>
         <source
           src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4"
           type="video/mp4"
