--- a/modulo1/css-labetube/video2.html
+++ b/modulo1/css-labetube/video2.html
@@ -16,7 +16,7 @@
       </header>
     </div>
     <main>
-        <video width="100%" height="auto" controls autoplay>
+        <video controls autoplay>
         <source
           src="https://storage.googleapis.com/future-apis.appspot.com/7.mp4"
           type="video/mp4"
